Added ContextHandler support